# Chthonic_Metal

./: CMakeLists.txt  README.md  cmake.yml
.github/workflows/: cmake.yml
assets/: highscores.cmgt  vase.kra
assets/fonts/Another Danger/: Another Danger - Read Me.txt
src/: AssetManager.cpp  AssetManager.hpp  main.cpp
src/Engine/: Button.cpp  Button.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Random.hpp  Scene.cpp  Scene.hpp  Utils.hpp
src/GameObjects/: Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  Fire.cpp  Fire.hpp  Player.cpp  Player.hpp
src/Scenes/: CharacterSelection.cpp  CharacterSelection.hpp  Fight.cpp  Fight.hpp  MainMenu.cpp  MainMenu.hpp
